# napi_generator

./: .README_ZH.md.swp  .gitattributes  .gitignore  DEVELOP.md  DEVELOP_ZH.md  FAQ.md  OAT.xml  README.en.md  README.md  README_ZH.md  README_zh.md  autocommit.py  package-lock.json  package.json
docs/: DEVELOP_ZH.md  develop.md  (+15 more)
examples/akitutorials/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
examples/akitutorials/entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
examples/napitutorials/entry/src/main/cpp/: CMakeLists.txt  cjsonparsecase.cpp.gen  init.cpp
examples/napitutorials/entry/src/main/cpp/basesample/: basesample.cpp
examples/napitutorials/entry/src/main/cpp/include/: basesample.h  cjsonsample.h  common.h  javascriptapi.h  nadatatypes.h  nodeapi.h
examples/napitutorials/entry/src/main/cpp/include/cJsonNapiH/: cjsoncommon.h  cjsonnapi.h
examples/napitutorials/entry/src/main/cpp/javascript/jsabstractops/: napicoercetobool.cpp
examples/napitutorials/entry/src/main/cpp/javascriptapi/: common.cpp
examples/napitutorials/entry/src/main/cpp/javascriptapi/jsabstractops/: init.cpp  napicoercetobool.cpp  napicoercetonumber.cpp  napicoercetoobject.cpp  napicoercetostring.cpp  napiisarray.cpp  napistrictequals.cpp  napitypeof.cpp
examples/napitutorials/entry/src/main/cpp/javascriptapi/jsfunctions/: jsFunctionsInit.cpp  napicallfunction.cpp  napicreatefunction.cpp
examples/napitutorials/entry/src/main/cpp/javascriptapi/jsobjectwrap/: jsObjectWrapInit.cpp  napiunwrap.cpp  napiwrap.cpp
examples/napitutorials/entry/src/main/cpp/javascriptapi/jsproperty/: jsPropertyInit.cpp  napideleteelement.cpp  napideleteproperty.cpp  napigetelement.cpp  napigetnamedproperty.cpp  napigetproperty.cpp  napigetpropertynames.cpp  napihaselement.cpp  napihasnamedproperty.cpp  napihasproperty.cpp  napiobjectfreeze.cpp  napiobjectseal.cpp  napisetelement.cpp  napisetnamedproperty.cpp  napisetproperty.cpp
examples/napitutorials/entry/src/main/cpp/javascriptapi/jsvalues/: jsValuesInit.cpp  napicreateint32.cpp  napicreateint64.cpp  napicreateuint32.cpp
examples/napitutorials/entry/src/main/cpp/ncpp/cjsoncase/: cjsonaddfalsetoobjectcase.cpp  cjsonadditemtoarraycase.cpp  cjsonadditemtoobjectcase.cpp  cjsonaddnumbertoobjectcase.cpp  cjsonaddstringtoobjectcase.cpp  cjsoncase.cpp  cjsoncommon.cpp  cjsoncreatearraycase.cpp  cjsoncreateintarraycase.cpp  cjsoncreateobjectcase.cpp  cjsoncreatestringcase.cpp  cjsongetarraysizecase.cpp  cjsonparsecase.cpp  cjsonprintcase.cpp  cjsonsample.cpp  nodeapiCommon.cpp
examples/napitutorials/entry/src/main/cpp/ncpp/cjsoncase/cjsonGenResult/: cjsonaddfalsetoobject.cpp.gen  cjsonaddnumbertoobject.cpp.gen  cjsonaddstringtoobject.cpp.gen  cjsoncreateobject.cpp.gen  cjsoncreatestring.cpp.gen  cjsongetarraysize.cpp.gen  cjsonparse.cpp.gen  cjsonprint.cpp.gen
examples/napitutorials/entry/src/main/cpp/ncpp/cjsoncase/cjsonGenResult/cppResult/: cjsonaddfalsetoobject.cpp.gen  cjsonadditemtoarray.cpp.gen  cjsonadditemtoobject.cpp.gen  cjsonaddnumbertoobject.cpp.gen  cjsonaddstringtoobject.cpp.gen  cjsoncommon.cpp.gen  cjsoncreatearray.cpp.gen  cjsoncreateintarray.cpp.gen  cjsoncreateobject.cpp.gen  cjsoncreatestring.cpp.gen  cjsongetarraysize.cpp.gen  cjsonparse.cpp.gen  cjsonprint.cpp.gen
examples/napitutorials/entry/src/main/cpp/ncpp/cjsoncase/cjsonGenResult/dtsResult/: dtsFile.d.ts.gen  index.d.ts.gen
examples/napitutorials/entry/src/main/cpp/ncpp/cjsoncase/cjsonGenResult/hResult/: cjsoncommon.h.gen  cjsonnapi.h.gen  testNapi.h.gen
examples/napitutorials/entry/src/main/cpp/ncpp/cjsoncase/cjsonGenResult/initResult/: cjsoninit.cpp.gen  testInit.cpp.gen
examples/napitutorials/entry/src/main/cpp/ncpp/ffmpegcase/manager/: plugin_manager.cpp
examples/napitutorials/entry/src/main/cpp/ncpp/ffmpegcase/render/: egl_core.cpp  egl_core.h  plugin_render.cpp  plugin_render.h
examples/napitutorials/entry/src/main/cpp/nodeapi/datatypes/: nadatatypes.cpp  napienv.cpp  napiextendederrorinfo.cpp  napistatus.cpp  napithreadsafefunc.cpp  napithreadsafefuncall.cpp  napithreadsafefuncrel.cpp  napivalue.cpp
examples/napitutorials/entry/src/main/cpp/nodeapi/envlifecycleapis/: napiinstancedata.cpp
examples/napitutorials/entry/src/main/cpp/types/libentry/: cjson.d.ts  index.d.ts  oh-package.json5
examples/p7zipTest/entry/src/main/cpp/: CMakeLists.txt
examples/p7zipTest/entry/src/main/cpp/common/: CreateObjectWrapper.cpp  ErrorCodes.cpp  ErrorCodes.h  FormatDetector.cpp  FormatDetector.h  LzmaUtils.cpp  LzmaUtils.h  common.h
examples/p7zipTest/entry/src/main/cpp/compress/: ArchiveCompressor.cpp  ArchiveCompressor.h
examples/p7zipTest/entry/src/main/cpp/decompress/: ArchiveHandler.cpp  ArchiveHandler.h  UnifiedDecompressor.cpp  UnifiedDecompressor.h
examples/p7zipTest/entry/src/main/cpp/napi/: napi_compress_async.cpp  napi_decompress_async.cpp  napi_decompress_async.h  napi_init.cpp
examples/p7zipTest/entry/src/main/cpp/types/libentry/: Index.d.ts
examples/p7zipTest/entry/src/main/cpp/wrapper/: README.md
examples/p7zipTest/entry/src/main/cpp/wrapper/common/: ErrorCodes.cpp  FormatDetector.cpp
examples/p7zipTest/entry/src/main/cpp/wrapper/decompress/: ArchiveHandler.h  UnifiedDecompressor.cpp
examples/p7zipTest/entry/src/main/cpp/wrapper/napi/: napi_compress_async.cpp  napi_compress_async.h  napi_init.cpp
examples/p7zipTest/entry/src/main/cpp_bootstrap/: CMakeLists.txt
src/skills/ohclitools/clitools/: BUILD.gn  README.md  clitools.cpp  clitools_handle.h  common.cpp  common_callback.cpp  common_callback.h  common_dump.cpp  mischandle.cpp  mischandle.h
src/skills/ohclitools/dsclitools/: BUILD.gn  DESIGN.md  clitools.cpp  clitools.h  clitools_bus_center.cpp  clitools_bus_center.h  clitools_constants.h  clitools_session.cpp  clitools_session.h  common.cpp  common.h
src/skills/ohclitools/wificlitools/: BUILD.gn  DESIGN.md  clitools.cpp  clitools.h  clitools_constants.h  clitools_hid2d.cpp  clitools_hid2d.h  clitools_hotspot.cpp  clitools_hotspot.h  clitools_p2p.cpp  clitools_p2p.h  clitools_sta.cpp  clitools_sta.h  common.cpp  common.h
(+1606 files in other folders)
