# Copyright (C) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/communication/bluetooth/bluetooth.gni")

SUBSYSTEM_DIR = "//foundation/communication"
BLUETOOTH_FRAMEWORK_DIR = "$SUBSYSTEM_DIR/bluetooth/frameworks"
BLUETOOTH_INTERFACES_DIR = "$SUBSYSTEM_DIR/bluetooth/interfaces"
BLUETOOTH_TOOLS_DIR = "$SUBSYSTEM_DIR/bluetooth/test/clitools"

config("btframework_config") {
  cflags_cc = [
    "-fPIC",
    "-Wno-unused-parameter",
    "-Wno-return-type-c-linkage",
    "-Wunused-private-field",
  ]
  include_dirs = [
    "include",
    "ipc/include",
    "ipc",
    "$SUBSYSTEM_DIR/bluetooth/interfaces/inner_api/include/c_header",
    "$SUBSYSTEM_DIR/bluetooth/frameworks/inner/ipc/include",
    "$SUBSYSTEM_DIR/bluetooth/frameworks/inner/include",
  ]

  defines = []
  if (is_asan || use_clang_coverage) {
    defines += [ "DTFUZZ_TEST" ]
  }
  if (bluetooth_service_resourceschedule) {
    defines += [ "RES_SCHED_SUPPORT" ]
  }
}

config("btframework_public_config") {
  visibility = [ "*" ]
  include_dirs = [
    "$SUBSYSTEM_DIR/bluetooth/interfaces/inner_api/include",
    "$SUBSYSTEM_DIR/bluetooth/interfaces/inner_api/include/c_header",
  ]
}

local_base_sources = [
  "$BLUETOOTH_TOOLS_DIR/clitools.cpp",
  "$BLUETOOTH_TOOLS_DIR/common.cpp",
  "$BLUETOOTH_TOOLS_DIR/mischandle.cpp",
  "$BLUETOOTH_TOOLS_DIR/common_dump.cpp",
  "$BLUETOOTH_TOOLS_DIR/common_callback.cpp",
]

ohos_executable("btcommand") {
  sanitize = {
    cfi = true  # Enable/disable control flow integrity detection
    boundary_sanitize = false  # Enable boundary san detection
    cfi_cross_dso = true  # Cross-SO CFI Checks
    integer_overflow = false  # Enable integer overflow detection
    ubsan = false  # Enable some Ubsan options
    cfi_vcall_icall_only = true
    debug = false
  }

  sources = local_base_sources
  include_dirs = [
    "$BLUETOOTH_INTERFACES_DIR/inner_api/include",
    "$BLUETOOTH_INTERFACES_DIR/inner_api/include/c_header",
  ]
  deps = [ "$BLUETOOTH_FRAMEWORK_DIR/inner:btframework" ]
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]
  cflags_cc = [
    "-fPIC",
    "-Wno-unused-parameter",
    "-Wno-return-type-c-linkage",
    "-Wunused-private-field",
    "-Wno-unused-const-variable",
    "-Wno-unused-function"
  ]

  part_name = "bluetooth"
  subsystem_name = "communication"
}
