# Copyright (C) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# dsclitools CLI (design see DESIGN.md).
# Deploy: copy this directory to foundation/communication/dsoftbus/tests/dsclitools
# and add "test/dsclitools:dscommand" to tests/BUILD.gn group deps.
# From tests/dsclitools, dsoftbus root is "../..".

import("//build/ohos.gni")

dsoftbus_root_path = "../.."

ohos_executable("dscommand") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = false
    integer_overflow = false
    ubsan = false
    cfi_vcall_icall_only = true
    debug = false
  }

  sources = [
    "clitools.cpp",
    "common.cpp",
    "clitools_bus_center.cpp",
    "clitools_session.cpp",
  ]

  include_dirs = [
    ".",
    "$dsoftbus_root_path/interfaces/kits",
    "$dsoftbus_root_path/interfaces/kits/bus_center",
    "$dsoftbus_root_path/interfaces/kits/common",
    "$dsoftbus_root_path/interfaces/kits/transport",
  ]

  external_deps = [ "dsoftbus:softbus_client" ]

  cflags_cc = [
    "-fPIC",
    "-Wno-unused-parameter",
  ]

  part_name = "dsoftbus"
  subsystem_name = "communication"
  testonly = true
}
